<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>net.java.openjdk.cacio</groupId>
    <artifactId>cacio</artifactId>
    <version>1.10-SNAPSHOT</version>
  </parent>

  <artifactId>cacio-sdl</artifactId>
	<packaging>nar</packaging>

  <properties>
		<SDL2.include>/usr/include/SDL2</SDL2.include>
    <SDL2.lib>/usr/lib</SDL2.lib>
  </properties>

  <name>Cacio SDL Module</name>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
          <compilerArgument>-XDignore.symbol.file=true</compilerArgument>
        </configuration>
			</plugin>

      <plugin>
        <groupId>com.github.maven-nar</groupId>
        <artifactId>nar-maven-plugin</artifactId>
        <version>3.10.1</version>
        <extensions>true</extensions>
        <configuration>
          <libraries>
            <library>
              <type>jni</type>
              <narSystemPackage>net.java.openjdk.cacio.sdl</narSystemPackage>
            </library>
          </libraries>
          <c>
            <includePaths>
              <includePath><path>${SDL2.include}</path></includePath>
            </includePaths>
            <debug>true</debug>
          </c>
          <linker>
            <libs>
              <lib>
                <name>SDL2</name>
                <type>shared</type>
                <directory>${SDL2.lib}</directory>
              </lib>
            </libs>
          </linker>
        </configuration>
        <executions>
          <execution>
            <id>default-nar-javah</id>
            <phase>none</phase>
          </execution>
        </executions>
			</plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>11</source>
          <target>11</target>
          <compilerArgs>
            <arg>-XDignore.symbol.file=true</arg>
            <arg>--add-exports=java.desktop/java.awt.peer=ALL-UNNAMED</arg>
            <arg>--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED</arg>
            <arg>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</arg>
            <arg>--add-exports=java.desktop/sun.java2d.pipe=ALL-UNNAMED</arg>
            <arg>--add-exports=java.desktop/sun.java2d.loops=ALL-UNNAMED</arg>
            <arg>--add-exports=java.desktop/java.awt.dnd.peer=ALL-UNNAMED</arg>
            <arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
            <arg>--add-exports=java.desktop/sun.awt.datatransfer=ALL-UNNAMED</arg>
            <arg>-h</arg>
            <arg>${project.build.directory}/nar/javah-include</arg>
          </compilerArgs>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <groupId>net.java.openjdk.cacio</groupId>
      <artifactId>cacio-shared</artifactId>
      <version>${project.version}</version>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.1</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

</project>
